--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="white" />
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="apple-touch-icon" href="/images/maskable-icon.png" />
     <title>Calculadora de IMC</title>
 </head>
 <body>
